Mobile: Fixed spacing in foldertree

--- a/ui/apps/themes/components/folder.less
+++ b/ui/apps/themes/components/folder.less
@@ -218,6 +218,9 @@
 
     .favorites, .unified-folders, .standard-folders, .other-folders {
         margin-bottom: @default-padding;
+        @media (max-width: 480px), (max-device-width: 480px) {
+            margin-bottom: 0;
+        }
     }
 
     .favorites > .folder-node > .folder-label {
